Add responsive CSS

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="container-heading">English Dictionary</h1>
+        <h1 class="container_heading">English Dictionary</h1>
         <input placeholder="Typing here ..." type="text" class="input" id="input" />
-        <p class="info-text" id="info-text">Insert a word and press enter</p>
-        <div class="meaning-container" id="meaning-container">
+        <p class="info_text" id="info_text">Insert a word and press enter</p>
+        <div class="meaning_container" id="meaning_container">
             <p>Word Title: <span class="title" id="title">____</span></p>
             <p>Meaning: <span class="meaning" id="meaning">____</span></p>
             <audio controls id="audio"></audio>
