Add footer element

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <audio controls id="audio"></audio>
         </div> 
     </div>
+
+    <div class="footer">Designed by
+        <a href="https://github.com/bakna2t" target="_blank">_&#216;k</a>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
