Add noscript tag

--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>English Dictionary</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <noscript><h3>Please enable JavaScript in your browser!</h3> </noscript>
     <div class="container">
-        <h1 class="container_heading">English Dictionary</h1>
-        <input placeholder="Typing here ..." type="text" class="input" id="input" />
-        <p class="info_text" id="info_text">Insert a word and press enter</p>
-        <div class="meaning_container" id="meaning_container">
-            <p>Word Title: <span class="title" id="title">____</span></p>
-            <p>Meaning: <span class="meaning" id="meaning">____</span></p>
-            <audio controls id="audio"></audio>
-        </div> 
+      <h1 class="container_heading">English Dictionary</h1>
+      <input
+        placeholder="Typing here ..."
+        type="text"
+        class="input"
+        id="input"
+      />
+      <p class="info_text" id="info_text">Insert a word and press enter</p>
+      <div class="meaning_container" id="meaning_container">
+        <p>Word Title: <span class="title" id="title">____</span></p>
+        <p>Meaning: <span class="meaning" id="meaning">____</span></p>
+        <audio controls id="audio"></audio>
+      </div>
     </div>
 
-    <div class="footer">Designed by
-        <a href="https://github.com/bakna2t" target="_blank">_&#216;k</a>
+    <div class="footer">
+      Designed by
+      <a href="https://github.com/bakna2t" target="_blank">_&#216;k</a>
     </div>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
