Add click listener to search btn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           class="input"
           id="input"
         />
-        <button class="btn" id="btn" type="submit">
+        <button class="btn" id="btn-search" type="submit">
           <ion-icon name="search-sharp" size="large"></ion-icon>
         </button>
       </div>
