Add spinner element

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>English Dictionary</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/spinner/spinner.css" />
   </head>
   <body>
     <noscript><h3>Please enable JavaScript in your browser!</h3></noscript>
@@ -34,6 +35,9 @@
       Designed by
       <a href="https://github.com/bakna2t" target="_blank">_&#216;k</a>
     </div>
+
+    <div class="spinner"></div>
+
     <script src="main.js"></script>
     <script
       type="module"
