Update style properties

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>English Dictionary</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/spinner/spinner.css" />
   </head>
   <body>
     <noscript><h3>Please enable JavaScript in your browser!</h3></noscript>
-    <div class="container">
+    <main class="container">
       <h1 class="container_heading">English Dictionary</h1>
       <div class="container_search">
         <input
@@ -29,7 +29,7 @@
         <p>Meaning: <span class="meaning" id="meaning">____</span></p>
         <audio controls id="audio"></audio>
       </div>
-    </div>
+    </main>
 
     <div class="footer">
       Designed by
