Update spinner style properties, add comments

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <noscript><h3>Please enable JavaScript in your browser!</h3></noscript>
     <main class="container">
       <h1 class="container_heading">English Dictionary</h1>
+      <!-- Search input -->
       <div class="container_search">
         <input
           placeholder="Typing here ..."
@@ -24,6 +25,7 @@
         </button>
       </div>
       <p class="info_text" id="info_text">Insert a word and press enter</p>
+      <!-- Searching result -->
       <div class="meaning_container" id="meaning_container">
         <p>Word Title: <span class="title" id="title">____</span></p>
         <p>Meaning: <span class="meaning" id="meaning">____</span></p>
