Update head tag

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <title>English Dictionary</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/spinner/spinner.css" />
+    <!-- Ion Icons -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </head>
   <body>
     <noscript><h3>Please enable JavaScript in your browser!</h3></noscript>
+
     <main class="container">
       <h1 class="container_heading">English Dictionary</h1>
       <!-- Search input -->
@@ -41,13 +51,5 @@
     <div class="spinner"></div>
 
     <script src="main.js"></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
   </body>
 </html>
