--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>English Dictionary</title>
     <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/spinner/spinner.css" />
+    <link rel="stylesheet" href="styles/loader/loader.css" />
     <!-- Ion Icons -->
     <script
       type="module"
