Update loader function name

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <a href="https://github.com/bakna2t" target="_blank">_&#216;k</a>
     </div>
 
-    <div class="spinner"></div>
+    <div class="loader"></div>
 
     <script src="main.js"></script>
   </body>
